# document-extraction

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: dev.yml  release.yml  staging.yml
document_extraction/: excel_extraction.py  extract_from_excel.py  extraction.py  image_extraction.py  multi_sheet_extraction.json  open_ai_data_extraction.py  textable_extraction.py  utils.py
document_extraction/models/: product.py
media_files/: 1.docx  1.xlsx
